# c2a-core

./: .flake8  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  c2a_core_main.c  c2a_core_main.h  common.cmake  git_revision.c  pyproject.toml  renovate.json  setup.bat  setup.sh
Applications/: CMakeLists.txt  anomaly_handler.c  anomaly_handler.h  divided_cmd_utility.c  divided_cmd_utility.h  event_utility.c  event_utility.h  gs_command_dispatcher.c  gs_command_dispatcher.h  memory_dump.c  memory_dump.h  nop.c  nop.h  realtime_command_dispatcher.c  realtime_command_dispatcher.h  telemetry_manager.c  telemetry_manager.h  timeline_command_dispatcher.c  timeline_command_dispatcher.h  timeline_command_dispatcher_id_define.h  utility_command.c  utility_command.h  utility_counter.c  utility_counter.h
Applications/TestApp/: CMakeLists.txt  test_ccp_util.c  test_ccp_util.h
Examples/2nd_obc_user/src/src_user/Applications/: CMakeLists.txt  app_headers.h  app_registry.c  app_registry.h
Examples/2nd_obc_user/src/src_user/Applications/DriverInstances/: di_mobc.c  di_mobc.h
Examples/2nd_obc_user/src/src_user/Applications/UserDefined/: debug_apps.c  debug_apps.h
Examples/2nd_obc_user/src/src_user/Settings/: CMakeLists.txt  build_settings.h  port_config.h
Examples/2nd_obc_user/src/src_user/Settings/Applications/: anomaly_handler_params.h  data_recorder_define.h  timeline_command_dispatcher_define.h
Examples/2nd_obc_user/src/src_user/Settings/DriverSuper/: driver_buffer_define.h  driver_super_params.h
Examples/2nd_obc_user/src/src_user/Settings/Modes/: mode_definitions.c  mode_definitions.h  mode_manager_params.h
Examples/2nd_obc_user/src/src_user/Settings/System/: anomaly_logger_define.h  app_manager_params.h  event_handler_params.h  event_logger_group.h  event_logger_params.h  event_logger_settings.h  obc_time_params.h
Examples/2nd_obc_user/src/src_user/Settings/TlmCmd/: block_command_table_params.h  command_analyze_params.h  common_cmd_packet_define.h  common_tlm_packet_define.h  packet_handler_params.h  telemetry_frame_params.h
Examples/minimum_user/src/src_user/Drivers/: CMakeLists.txt
Examples/minimum_user/src/src_user/Drivers/Aocs/: aobc.c  aobc.h  aobc_command_definitions.h  aobc_telemetry_buffer.c  aobc_telemetry_buffer.h  aobc_telemetry_data_definitions.h  aobc_telemetry_definitions.h
Examples/minimum_user/src/src_user/Drivers/Com/: gs.c  gs.h  gs_validate.h
Examples/minimum_user/src/src_user/Drivers/Etc/: UART_TEST.c  UART_TEST.h  uart_test.c  uart_test.h
Examples/minimum_user/src/src_user/Settings/: CMakeLists.txt  git_revision_config.h  port_config.h
Examples/minimum_user/src/src_user/Settings/Applications/: telemetry_manager_define.h  telemetry_manager_params.h  timeline_command_dispatcher_define.h
Examples/minimum_user/src/src_user/Settings/DriverSuper/: driver_buffer_define.h  driver_super_params.h
Examples/minimum_user/src/src_user/Settings/System/: anomaly_logger_group.h  anomaly_logger_settings.c  app_manager_params.h  event_logger_group.h  event_logger_settings.c
Examples/minimum_user/src/src_user/Settings/TlmCmd/: command_analyze_params.h  common_cmd_packet_define.c  common_cmd_packet_define.h  common_tlm_packet_define.h  packet_handler_params.h
Examples/minimum_user_for_s2e/: CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md
Examples/minimum_user_for_s2e/data/: settings.json
Examples/minimum_user_for_s2e/data/DataBase/CMD_DB/csv/: SAMPLE_MOBC_CMD_DB_BCT.csv
Examples/minimum_user_for_s2e/data/DataBase/CMD_DB/md/: SAMPLE_MOBC_CMD_DB_BCT.md
Examples/minimum_user_for_s2e/data/DataBase/CMD_DB/toml/: SAMPLE_MOBC_CMD_DB_CMD_DB.toml
Examples/minimum_user_for_s2e/data/DataBase/TLM_DB/: status.md  status.toml
Examples/minimum_user_for_s2e/data/DataBase/TLM_DB/csv/: SAMPLE_MOBC_TLM_DB_AM.csv  SAMPLE_MOBC_TLM_DB_APP_TIME.csv  SAMPLE_MOBC_TLM_DB_BL.csv  SAMPLE_MOBC_TLM_DB_CA.csv  SAMPLE_MOBC_TLM_DB_DCU.csv  SAMPLE_MOBC_TLM_DB_EH.csv  SAMPLE_MOBC_TLM_DB_EH_INDEX.csv  SAMPLE_MOBC_TLM_DB_EH_LOG.csv  SAMPLE_MOBC_TLM_DB_EL.csv  SAMPLE_MOBC_TLM_DB_EL_CLOG.csv  SAMPLE_MOBC_TLM_DB_EL_TLOG.csv  SAMPLE_MOBC_TLM_DB_GS.csv  SAMPLE_MOBC_TLM_DB_MEM.csv  SAMPLE_MOBC_TLM_DB_MM.csv  SAMPLE_MOBC_TLM_DB_MOBC.csv  SAMPLE_MOBC_TLM_DB_TF.csv  SAMPLE_MOBC_TLM_DB_TL.csv  SAMPLE_MOBC_TLM_DB_TLM_MGR.csv  SAMPLE_MOBC_TLM_DB_UART_TEST.csv
Examples/minimum_user_for_s2e/data/DataBaseAobc/TLM_DB/: status.toml
Examples/minimum_user_for_s2e/src/s2e_mockup/: CMakeLists.txt  main.cpp
Examples/minimum_user_for_s2e/src/src_user/: c2a_main.c  common.cmake
Examples/minimum_user_for_s2e/src/src_user/Applications/: CMakeLists.txt  app_headers.h  app_registry.c  app_registry.h
Examples/minimum_user_for_s2e/src/src_user/CmdTlm/: CMakeLists.txt  block_command_definitions.h  block_command_user_settings.c  block_command_user_settings.h  command_definitions.c  command_definitions.h  command_source.h  common_tlm_cmd_packet.c  telemetry_definitions.c  telemetry_definitions.h  telemetry_source.h  user_packet_handler.c  user_packet_handler.h
Examples/minimum_user_for_s2e/src/src_user/CmdTlm/Ccsds/: TCFrame.h  vcdu.h  (+6 more)
Examples/minimum_user_for_s2e/src/src_user/Drivers/: CMakeLists.txt
Examples/minimum_user_for_s2e/src/src_user/IfWrapper/: CMakeLists.txt  ccsds_user.h
Examples/minimum_user_for_s2e/src/src_user/Script/: activate_sils_define.bat  deactivate_sils_define.bat  git_revision.sh  git_revision.tmp
Examples/minimum_user_for_s2e/src/src_user/Settings/: CMakeLists.txt  build_settings.h  git_revision_config.h  initial_settings.h  port_config.h  sils_define.h
Examples/minimum_user_for_s2e/src/src_user/Test/: README.md  settings.json
Examples/minimum_user_for_s2e/src/src_user/TlmCmd/: CMakeLists.txt  block_command_definitions.c  block_command_definitions.h  block_command_user_settings.h  command_definitions.c  command_definitions.h  command_source.h  common_cmd_packet.c  common_tlm_cmd_packet.c  common_tlm_packet.c  telemetry_definitions.c  telemetry_definitions.h  telemetry_source.h  user_packet_handler.c  user_packet_handler.h
(+803 files in other folders)
