[package]
name = "c2a-core"
version = "3.9.0-beta.8"
edition = "2021"

links = "c2a-core"

description = "Core of Command Centric Architecture"
readme = "README.md"
license = "MIT"

repository = "https://github.com/ut-issl/c2a-core"
documentation = "https://ut-issl.github.io/c2a-reference/c2a-core"

[features]
default = ["clang-runtime"]
std = []
export-src = ["std"]
clang-runtime = ["clang/runtime"]

[build-dependencies]
semver = "1.0.17"
clang = "2.0.0"
